fix: hide buttons, form, labels behind the walls

--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@
 .reloadWrap {
   position: absolute;
   top: 54px;
-  z-index: 1000;
+  z-index: 100;
   left: 50%;
   -webkit-transform: translate(-50%, 0%);
           transform: translate(-50%, 0%);
@@ -744,7 +744,7 @@ body {
   -webkit-transform: translate(-50%, 0%);
           transform: translate(-50%, 0%);
   text-transform: uppercase;
-  z-index: 1000;
+  z-index: 100;
   color: white;
   font-family: "Mortal Kombat 3";
   text-shadow: 2px 2px 2px #cd0e03;
@@ -785,7 +785,7 @@ form:invalid button[class="button"]:active::after {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  z-index: 1000;
+  z-index: 100;
 }
 
 .inputWrap {
