--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -58,7 +58,7 @@
 .reloadWrap {
   position: absolute;
   top: 54px;
-  z-index: 1000;
+  z-index: 100;
   left: 50%;
   transform: translate(-50%, 0%);
 }
